browser: Give formulabar a fixed button width to avoid jumping

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1198,6 +1198,10 @@ input[type='number']:hover::-webkit-outer-spin-button {
 	opacity: 0.8;
 }
 
+#acceptformula {
+	margin-inline-start: 3px;
+}
+
 .formulabar.unotoolbutton:hover {
 	opacity: 1;
 }
